--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Счётчик времени</title>
+    <title>С последней встречи прошло</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
@@ -20,3 +20,4 @@
     <script src="./routine.js"></script>
 </body>
 </html>
+
